2008-11-12  Mike Krüger  <mike@icsharpcode.net>

	* Gui/MemberCompletionData.cs:
	* Gui/CodeTemplateCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 443493 - C# completion
	should not trigger at start of existing words'.

2008-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Track fix in text editor's
	completion line/col indexing. It's now 1-indexed, as it should be.
	Allow triggering after ( and {. Don't aggressively trigger before a
	non-whitespace/punctuation char. Replace "location" field with
	parameter usage, so it's easier to follow the usage. Refactor out
	some expression finder creation so it's all done in one place.

2008-11-11  Mike Krüger  <mike@icsharpcode.net>

	* Gui/MemberCompletionData.cs: fixed 'Bug 441621 - Ctrl-space in middle
	of word does not overwrite rest of word'.

2008-11-11  Mike Krüger  <mike@icsharpcode.net>

	* Gui/CSharpTextEditorCompletion.cs: fixed completion popup for
	string/char literals.

2008-11-11  Mike Krüger  <mike@icsharpcode.net>

	* Gui/NewOverrideCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 442728 - Code completion
	for 'override' is not aware of namespaces".

2008-11-11  Mike Krüger  <mike@icsharpcode.net>

	* Gui/CSharpTextEditorCompletion.cs:
	* FormattingStrategy/CSharpIndentEngine.cs: fixed 'Bug 443453 -
	Parameter completion and comments'.

2008-11-11  Mike Krüger  <mike@icsharpcode.net>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 443493 - C# completion
	should not trigger at start of existing words'.

2008-11-10  Mike Krüger  <mike@icsharpcode.net>

	* Gui/CSharpTextEditorCompletion.cs: Added enable auto completion
	option.

2008-11-07  Mike Krüger  <mike@icsharpcode.net>

	* Parser/CodeGenerator.cs:
	* Gui/NRefactoryResolver.cs:
	* Parser/NRefactoryParser.cs: fixed 'Bug 364779 - When I click "Find All
	References" monodevevlop crashes'.

2008-11-06  Lluis Sanchez Gual  <lluis@novell.com>
